bugfixes for hamburger visibility

--- a/website.css
+++ b/website.css
@@ -466,6 +466,8 @@ body img:not(footer img){
         width: 100%;
         background-color: rgb(212, 185, 185);
         color: #000;
+        font-size: 1rem;
+        height: 30px; 
     }
     #navlist {
         display: none;
